# Starfish-Network

./: .gitignore  Dockerfile  README.md  Software_Flow.md  build.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sim-requirements.txt  simple_executor.py  simulation-client.py  simulation-manager.py  simulation-terminal.py  simulation_client.py  simulation_logger.py  simulation_manager.py  simulation_terminal.py  simulation_test.py  test.py  test2.py
docs/: DEMO.md  OS.md  STAR_FRAMEWORK.md  general.md
examples/: file_reader.stardef.py  hello.stardef.py  io_test.py  list_dist.stardef.py  sample.stardef.py  shell.stardef.py  shell_include.py
sim/: 3d-force-graph.min.js  index.html  server.py
src/: DHT.py  GraphEngine.py  KeepAlive.py  KernelCommands.py  LRU_Cache.py  MessageFormats.py  ReliabilityEngine.py  SharedKV.py  TTL.py  TaskMonitor.py  __init__.py  file_reader.py  framing.txt  node.py  node_queue_interface.py  plugboard.py  star_comm.py  star_engine.py  test1.py  test2.py  test3.py  test_big.py  test_dht.py  ttl.py  utils.py
src/communications/: DHTService.py  FileService.py  IOService.py  KeepAliveService.py  PeerService.py  TaskService.py  build.sh  main_pb2.py  main_pb2.pyi  main_pb2_grpc.py  primitives_pb2.py  primitives_pb2.pyi  primitives_pb2_grpc.py
src/core/: DHT.py  File.py  io_host.py  star_comm.py  star_components.py  star_engine.py  star_os.py
src/star/: DHT.py  framing.txt  list_dist.stardef.py  node_queue_interface.py  sample.stardef.py  star_comm.py  star_components.py  star_engine.py  star_node_comm.py  test_dht.py  (+1 more)
(+5 files in other folders)
