[project]
name = "starfish-network"
version = "1.0.0"
description = "A starfish OS node"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dill==0.3.8",
    "grpcio==1.68.1",
    "grpcio-tools==1.68.1",
    "jsonpickle==3.2.2",
    "numpy==1.26.4",
    "rich==13.7.1",
    "telnetlib3==2.0.4",
    "typing-extensions==4.12.2",
]
